fix text element wrapping text when positioned on coordinates to the right after screen width

--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -46,5 +46,6 @@
     position: absolute;
 }
 
-.picture .element-data {
+.element.text .element-data {
+    white-space: nowrap;
 }
